# tt-midi-maker

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  bench_generation.py  bench_results.json  demo_ambient.py  demo_bebop.py  demo_blues.py  demo_classical.py  demo_cpu_mono.py  demo_jazz_clarinet.py  demo_monosynth.py  demo_performance.py  demo_postrock.py  demo_silicon_road.py  demo_temperature_experiment.py  pyproject.toml
config/: genres.yaml  roles.yaml  styles.yaml
docs/: index.html  quality_report.json  writeup.md
docs/assets/: style.css
docs/midi/: p1_intro.mid  p4_climax.mid
examples/aria-d-minor/: metadata.json  p1_exposition.mid  p2_development.mid  p3_recapitulation.mid
examples/bebop-quick-changes/: metadata.json  p1_head.mid  p2_solo1.mid  p3_solo2.mid
examples/cpu-monosynth/: p2_variation.mid
examples/midnight-blues/: metadata.json  p1_intro.mid  (+2 more)
scripts/: analyze_quality.py  generate_piano_rolls.py  play_midi.py  render_mp3s.py
tests/: conftest.py  test_analyzer.py  test_aria_backend.py  test_assembler.py  test_demo_coherence.py  test_forge_backend.py  test_hardware.py  test_harmony.py  test_humanize.py  test_improv.py  test_integration.py  test_judge.py  test_midi_backend.py  test_midi_backend_conditioning.py  test_models.py  test_player.py  test_prompt_engine.py  test_scale.py  test_server.py  test_session.py  test_source_midi.py  test_stitching.py  test_stream_player.py  test_structure.py  test_tokenizer.py
tt_midi_maker/: analyzer.py  assembler.py  errors.py  player.py  prompt_engine.py  server.py  session.py  stream_player.py
(+41 files in other folders)
